--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   </div>
 
   <footer>
-    © 2025 Wrong Choice · Leaderboard resets at midnight UTC
+    © 2025 Wrong Choice
   </footer>
 
   <script src="script.js"></script>
