--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="manifest" href="/wrong-choice/manifest.json">
+  <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#00c2ff" />
   <meta charset="UTF-8" />
   <title>Wrong Choice – Global Daily Leaderboard</title>
